# minitrace-rust

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  OWNERS  README.md  result.txt  rustfmt.toml  typos.toml
crates/minitrace-macro/: Cargo.toml
crates/minitrace-macro/src/: lib.rs
minitrace/: Cargo.toml
minitrace-datadog/: Cargo.toml  README.md
minitrace-datadog/src/: lib.rs
minitrace-futures/: Cargo.toml  README.md
minitrace-futures/src/: lib.rs
minitrace-jaeger/: Cargo.toml  README.md
minitrace-jaeger/src/: lib.rs  thrift.rs
minitrace-macro/: Cargo.toml  README.md
minitrace-macro/src/: lib.rs  trace.rs
minitrace-macro/src/trace/: analyze.rs  generate.rs  lower.rs  parse.rs
minitrace-macro/src/trace/lower/: async_trait.rs  block.rs  lifetime.rs  quotable.rs  signature.rs
minitrace-macro/tests/: expand.rs  spans.rs  trace-dev.rs  trace.rs  ui.rs
minitrace-macro/tests/expand/defaults/: 001-empty-sync.expanded.rs  001-empty-sync.rs  001-sync.expanded.rs  001-sync.rs  empty-async.rsi
minitrace-macro/tests/expand/issues/: tokio-1613.rs  tokio-1615.expanded.rs  tokio-1615.rsi
minitrace-macro/tests/spans/: async.rs  black-box-false-async.rs  black-box-false-local-async.rs  black-box-false-local-sync.rs  black-box-false-sync.rs  black-box-false-threads-async.rs  black-box-false-threads-sync.rs  default-name-local-async.rs  default-name-local-sync.rs  default-name-threads-async.rs  default-name-threads-sync.rs  doctest-async.rs  doctest-sync.rs  example-async.rs  example-sync.rs  no-be-drop-local-async-enter-true.rs  no-be-drop-local-sync.rs  no-be-drop-threads-async.rs  no-be-drop-threads-sync.rs  no-be-local-async.rs  no-be-local-sync.rs  no-be-no-drop-async-enter-false.rs  no-be-no-drop-local-async-enter-true.rs  no-be-no-drop-local-sync.rs  no-be-no-drop-threads-async.rs  no-be-no-drop-threads-sync.rs  no-be-threads-async.rs  no-be-threads-sync.rs  sync.rs
minitrace-macro/tests/trace/ui/err/: 001-name-is-ident.rs  001-name-is-ident.stderr  002-name-is-symbol.rs  002-name-is-symbol.stderr  003-name-is-boolean.rs  003-name-is-boolean.stderr  004-has-all-sync.rs  004-has-all-sync.stderr  005-has-enter_on_poll-sync.rs  005-has-enter_on_poll-sync.stderr  006-has-too-many-arguments.rs  006-has-too-many-arguments.stderr  007-interleaved.rs  007-interleaved.stderr  008-item-is-not-a-function.rs  008-item-is-not-a-function.stderr  009-optional-is-known-str.rs  009-optional-is-known-str.stderr  010-optional-is-not-assignment.rs  010-optional-is-not-assignment.stderr  011-optional-is-symbol.rs  011-optional-is-symbol.stderr  012-optional-is-unknown-ident.rs  012-optional-is-unknown-ident.stderr  013-optional-is-not-ident.rs  013-optional-is-not-ident.stderr  014-optional-value-type-is-ident.rs  014-optional-value-type-is-ident.stderr  015-optional-value-type-is-unknown-lit.rs  015-optional-value-type-is-unknown-lit.stderr  016-name-is-char.rs  016-name-is-char.stderr  017-name-is-byte-str.rs  017-name-is-byte-str.stderr  (+7 more)
minitrace-macro/tests/ui/err/: has-duplicated-arguments.rs.stderr  has-duplicated-arguments.stderr  has-empty-name.rs  has-empty-name.stderr  has-enter-on-poll-and-sync.rs  has-enter-on-poll-and-sync.stderr  has-expr-argument.rs  has-expr-argument.stderr  has-ident-arguments.stderr  has-name-and-full-name.rs  has-name-and-full-name.stderr  has-name-and-full-path.rs  has-name-and-full-path.stderr  has-name-and-path-name.rs  has-name-and-path-name.stderr  has-name-and-short-name.rs  has-name-and-short-name.stderr  has-no-arguments.stderr  has-properties-and-enter-on-poll.rs  has-properties-and-enter-on-poll.stderr  has-too-many-arguments.rs  has-too-many-arguments.stderr  item-is-not-a-function.rs  item-is-not-a-function.stderr  name-is-not-an-assignment-expression.rs  name-is-not-an-assignment-expression.stderr  properties-non-string.rs  properties-non-string.stderr  properties-partial-escape.rs  properties-partial-escape.stderr  trace-interleaved.rs  trace-interleaved.stderr
minitrace-macro/tests/ui/ok/: async-in-trait.rs  async-trait.rs  has-enter-on-poll.rs  has-full-name.rs  has-full-path.rs  has-name-and-full-name.rs  has-name-and-full-path.rs  has-name-and-path-name.rs  has-name-and-short-name.rs  has-name-async-mut.rs  has-name-async.rs  has-name-mut.rs  has-name.rs  has-no-arguments.rs  has-path-name.rs  has-properties.rs  has-short-name.rs
minitrace-opentelemetry/: Cargo.toml  README.md
minitrace-opentelemetry/examples/: demo.rs  docker-compose.yaml  otel-collector-config.yaml
minitrace-opentelemetry/src/: lib.rs
minitrace-tests/: Cargo.toml  README.md
minitrace-tests/integration/: indev.rs  main.rs
minitrace-tests/integration/tests/: defaults.rs  issues.rs  mod.rs  options.rs
minitrace-tests/integration/tests/defaults/: Cargo.toml  no-be-no-drop-local.expanded.rs  no-be-no-drop-local.rs  no-be-no-drop-threads.rs
minitrace-tests/integration/tests/issues/: 129.rs  141.rs
minitrace-tests/integration/tests/options/: name-threads.rs  no-be-local-async-enter-false.rs  no-be-local-async-enter-true.rs  no-be-local-sync.rs  threads-sync.rs
minitrace-tests/src/: lib.rs
minitrace/benches/: compare.rs  object_pool.rs  spsc.rs  trace.rs
minitrace/examples/: asynchronous.rs  batch_report.rs  get_started.rs  log.rs  synchronous.rs  tail_sampling.rs  unit_test.rs
minitrace/src/: event.rs  future.rs  lib.rs  macros.rs  span.rs
minitrace/src/collector/: acquirer.rs  base.rs  command.rs  console_reporter.rs  global_collector.rs  id.rs  mock_collector.rs  mod.rs  object_pool.rs  terminal_reporter.rs  test_reporter.rs
minitrace/src/local/: guard.rs  local_collector.rs  local_parent_guard.rs  local_span.rs  local_span_guard.rs  local_span_line.rs  local_span_stack.rs  mod.rs  raw_span.rs  span_id.rs  span_queue.rs
minitrace/src/util/: guard.rs  mod.rs  object_pool.rs  spsc.rs  tree.rs
minitrace/tests/: lib.rs
src/: lib.rs  (+14 more)
test-statically-disable/: Cargo.toml
test-statically-disable/src/: main.rs
test-utilities/: Cargo.toml
test-utilities/src/: lib.rs
(+99 files in other folders)
