[package]
name = "minitrace"
version = "0.5.1"
authors = ["The TiKV Project Authors"]
license = "Apache-2.0"
rust-version = "1.56.0"
edition = "2021"
description = "A high-performance timeline tracing library for Rust"
homepage = "https://github.com/tikv/minitrace-rust"
repository = "https://github.com/tikv/minitrace-rust"
documentation = "https://docs.rs/minitrace"
readme = "README.md"
keywords = ["tracing", "span", "datadog", "jaeger", "opentracing"]

[workspace]
resolver = "2"
members = [
    "minitrace-macro",
    "minitrace-jaeger",
    "minitrace-datadog",
    "minitrace-opentelemetry",
    "test-no-report",
    "minitrace-tests",
]
exclude = ["minitrace-old"]

[dependencies]
futures = "0.3"
minitrace-macro = { version = "0.5.1", path = "minitrace-macro", optional = true}
minstant = "0.1"
parking_lot = "0.12"
pin-project = "1.0"
# TODO: Remove once_cell once #![feature(once_cell)] is stabilized
once_cell = "1"
rand = "0.8"

[dev-dependencies]
# The procedural macro `trace` only supports async-trait higher than 0.1.52
async-trait = "0.1.52"
criterion = { version = "0.3", features = ["html_reports"] }
crossbeam = "0.8"
env_logger = "0.10"
futures = "0.3"
futures-timer = "3"
log = "0.4"
logcall = "0.1.4"
minitrace-datadog = { path = "minitrace-datadog" }
minitrace-jaeger = { path = "minitrace-jaeger" }
minitrace-opentelemetry = { version = "0.5.1", path = "minitrace-opentelemetry" }
mockall = "0.11"
once_cell = "1"
opentelemetry = { version = "0.19", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.12", features = ["trace"] }
rand = "0.8"
rustracing = "0.6"
serial_test = "2"
test-harness = "0.1.1"
tokio = { version = "1", features = ["rt", "time", "macros"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-opentelemetry = "0.15"
tracing-subscriber = "0.2"

# Cargo does not pass on features to subcrates in a virtual workspace
# https://github.com/rust-lang/cargo/issues/4942
#
# Workaround:
#
#     export MINITRACE_FEATURES="default minitrace-tests/tk"
#     cargo test --manifest-path=moniker/Cargo.toml --no-default-features --features="$MINITRACE_FEATURES" test-name
#
[features]
default = ["attributes", "enable"]
attributes = ["minitrace-macro"]
ci = []
enable = []

[[bench]]
name = "trace"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "object_pool"
harness = false
