[package]
name = "minitrace-datadog"
version = "0.5.0"
authors = ["The TiKV Project Authors"]
license = "Apache-2.0"
edition = "2021"
description = "Datadog reporter for minitrace-rust"
homepage = "https://github.com/tikv/minitrace-rust"
repository = "https://github.com/tikv/minitrace-rust"
documentation = "https://docs.rs/minitrace-datadog"
readme = "README.md"
categories = ["development-tools::debugging"]
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]

[dependencies]
minitrace = { path = "../minitrace" }
reqwest = { version = "0.11", features = ["blocking"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
futures = "0.3"
