[package]
description = "Datadog reporter for minitrace-rust"
documentation = "https://docs.rs/minitrace-datadog"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
name = "minitrace-datadog"
readme = "README.md"

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
log = "0.4"
minitrace = { workspace = true }
reqwest = { version = "0.11", features = ["blocking"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
futures = "0.3"
