[package]
description = "Utilities for tracing `futures` with minitrace-rust"
documentation = "https://docs.rs/minitrace-futures"
keywords = ["tracing", "span", "futures", "jaeger", "opentelemetry"]
name = "minitrace-futures"
readme = "README.md"

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
futures = "0.3"
minitrace = { workspace = true }
pin-project-lite = "0.2.13"

[dev-dependencies]
async-stream = "0.3.5"
tokio = { version = "1", features = ["rt", "time", "macros"] }
