[package]
name = "minitrace-jaeger"
version = "0.4.1"
authors = ["The TiKV Project Authors"]
license = "Apache-2.0"
edition = "2021"
description = "Jaeger reporter for minitrace-rust"
homepage = "https://github.com/tikv/minitrace-rust"
repository = "https://github.com/tikv/minitrace-rust"
documentation = "https://docs.rs/minitrace-jaeger"
readme = "README.md"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]

[dependencies]
log = "0.4"
minitrace = { version = "0.4.1", path = "../minitrace", features = ["report"] }
thrift_codec = "0.2"
tokio = { version = "1", features = ["net"] }

[dev-dependencies]
futures = "0.3"
