[package]
name = "minitrace-jaeger"
version = "0.6.7"
authors = ["The TiKV Project Authors"]
license = "Apache-2.0"
edition = "2021"
description = "Jaeger reporter for minitrace-rust"
homepage = "https://github.com/tikv/minitrace-rust"
repository = "https://github.com/tikv/minitrace-rust"
documentation = "https://docs.rs/minitrace-jaeger"
readme = "README.md"
categories = ["development-tools::debugging"]
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]

[dependencies]
log = "0.4"
minitrace = { version = "0.6.7", path = "../minitrace" }
thrift_codec = "0.3"

[dev-dependencies]
futures = "0.3"
