[package]
description = "Jaeger reporter for minitrace-rust"
documentation = "https://docs.rs/minitrace-jaeger"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
name = "minitrace-jaeger"
readme = "README.md"

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
log = "0.4"
minitrace = { workspace = true }
thrift_codec = "0.3"

[dev-dependencies]
futures = "0.3"
