[package]
name = "minitrace-macro"
version = "0.6.5"
authors = ["The TiKV Project Authors"]
license = "Apache-2.0"
edition = "2021"
description = "Attribute procedural macro for minitrace-rust"
homepage = "https://github.com/tikv/minitrace-rust"
repository = "https://github.com/tikv/minitrace-rust"
documentation = "https://docs.rs/minitrace-macro"
readme = "README.md"
categories = ["development-tools::debugging"]
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]

[lib]
proc-macro = true

[dependencies]
# The macro `quote_spanned!` is added to syn in 1.0.84
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.84", features = ["full", "parsing", "extra-traits", "proc-macro", "visit-mut"] }

[dev-dependencies]
logcall = "0.1.4"
minitrace = { version = "0.6.5", path = "../minitrace" }
tokio = { version = "1", features = ["full"] }
trybuild = "1"
# The procedural macro `trace` only supports async-trait higher than 0.1.52
async-trait = "0.1.52"
log = "0.4"
