[package]
description = "Attribute procedural macro for minitrace-rust"
documentation = "https://docs.rs/minitrace-macro"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
name = "minitrace-macro"
readme = "README.md"

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
# The macro `quote_spanned!` is added to syn in 1.0.84
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.84", features = [
  "full",
  "parsing",
  "extra-traits",
  "proc-macro",
  "visit-mut",
] }

[dev-dependencies]
logcall = "0.1.4"
minitrace = { workspace = true }
tokio = { version = "1", features = ["full"] }
trybuild = "1"
# The procedural macro `trace` only supports async-trait higher than 0.1.52
async-trait = "0.1.52"
log = "0.4"
