[package]
name = "minitrace-opentelemetry"
version = "0.6.3"
authors = ["The TiKV Project Authors"]
license = "Apache-2.0"
edition = "2021"
description = "Opentelemetry reporter for minitrace-rust"
homepage = "https://github.com/tikv/minitrace-rust"
repository = "https://github.com/tikv/minitrace-rust"
documentation = "https://docs.rs/minitrace-jaeger"
readme = "README.md"
categories = ["development-tools::debugging"]
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]

[dependencies]
futures = { version = "0.3", features = ["executor"] }
log = "0.4"
minitrace = { version = "0.6.3", path = "../minitrace" }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["trace"] }

[dev-dependencies]
opentelemetry-otlp = { version = "0.14", features = ["trace"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
