[package]
description = "Opentelemetry reporter for minitrace-rust"
documentation = "https://docs.rs/minitrace-opentelemetry"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
name = "minitrace-opentelemetry"
readme = "README.md"

authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
futures = { version = "0.3", features = ["executor"] }
log = "0.4"
minitrace = { workspace = true }
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["trace"] }

[dev-dependencies]
opentelemetry-otlp = { version = "0.16", features = ["trace"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
