[package]
name = "minitrace"
version = "0.6.6"
authors = ["The TiKV Project Authors"]
license = "Apache-2.0"
edition = "2021"
description = "A high-performance timeline tracing library for Rust"
homepage = "https://github.com/tikv/minitrace-rust"
repository = "https://github.com/tikv/minitrace-rust"
documentation = "https://docs.rs/minitrace"
readme = "../README.md"
categories = ["development-tools::debugging"]
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]

[features]
enable = []

[dependencies]
minitrace-macro = { version = "0.6.6", path = "../minitrace-macro" }
minstant = "0.1.7"
parking_lot = "0.12"
pin-project = "1"
# TODO: Remove once_cell once #![feature(once_cell)] is stabilized
once_cell = "1"
rand = "0.8"
rtrb = "0.2"

[dev-dependencies]
# The procedural macro `trace` only supports async-trait higher than 0.1.52
async-trait = "0.1.52"
criterion = { version = "0.4", features = ["html_reports"] }
crossbeam = "0.8"
env_logger = "0.10"
futures = "0.3"
futures-timer = "3"
log = "0.4"
logcall = "0.1.4"
minitrace = { path = ".", features = ["enable"] }
minitrace-datadog = { version = "0.6.6", path = "../minitrace-datadog" }
minitrace-jaeger = { version = "0.6.6", path = "../minitrace-jaeger" }
minitrace-opentelemetry = { version = "0.6.6", path = "../minitrace-opentelemetry" }
mockall = "0.11"
once_cell = "1"
opentelemetry-otlp = { version = "0.16", features = ["trace"] }
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["trace"] }

rand = "0.8"
rustracing = "0.6"
serial_test = "2"
test-harness = "0.1.1"
tokio = { version = "1", features = ["rt", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = "0.3"

[[bench]]
name = "trace"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "object_pool"
harness = false
