[package]
authors = ["The TiKV Project Authors"]
categories = ["development-tools::debugging"]
description = "A high-performance timeline tracing library for Rust"
documentation = "https://docs.rs/minitrace"
edition = "2021"
homepage = "https://github.com/tikv/minitrace-rust"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
license = "Apache-2.0"
name = "minitrace"
readme = "../README.md"
repository = "https://github.com/tikv/minitrace-rust"
version = "0.6.7"

[features]
enable = []

[dependencies]
minitrace-macro = { workspace = true }
minstant = "0.1.7"
parking_lot = "0.12"
pin-project = "1"
# TODO: Remove once_cell once #![feature(once_cell)] is stabilized
once_cell = "1"
rand = "0.8"
rtrb = "0.2"

[dev-dependencies]
async-trait = "0.1.52"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam = "0.8"
env_logger = "0.11"
flume = "0.11.0"
futures = "0.3"
futures-timer = "3"
log = "0.4"
logcall = "0.1.4"
minitrace = { workspace = true, features = ["enable"] }
minitrace-datadog = { workspace = true }
minitrace-jaeger = { workspace = true }
minitrace-opentelemetry = { workspace = true }
mockall = "0.12"
once_cell = "1"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-otlp = { version = "0.16", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["trace"] }
rand = "0.8"
rustracing = "0.6"
serial_test = "3"
test-harness = "0.2"
tokio = { version = "1", features = [
  "rt",
  "time",
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1"
tracing-core = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = "0.3"

[[bench]]
harness = false
name = "trace"

[[bench]]
harness = false
name = "compare"

[[bench]]
harness = false
name = "spsc"

[[bench]]
harness = false
name = "object_pool"
