[package]
name = "test-utilities"
version = "0.0.0"
description = "Utilities for Minitrace development"
license = "MIT OR Apache-2.0"
rust-version = "1.56.0"
edition = "2021"

[lib]
doctest = false

# Avoid adding crates, this is widely used in tests. It should compile fast!
[dependencies]
dissimilar = "1.0.2"
minitrace = { path = "../" }
regex = "1.5.5"
