[package]
name = "minitrace-macro"
version = "0.1.0"
authors = ["The TiKV Project Authors"]
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "parsing", "printing", "visit", "visit-mut", "clone-impls", "extra-traits", "proc-macro"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1.0"
